end of hour 2. displaying static html partial from angular component

--- a/client/app/views/index.html
+++ b/client/app/views/index.html
@@ -4,8 +4,8 @@
     <title>COMP2106 Game Library</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/app/public/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/app/public/stylesheets/bootstrap-theme.min.css">
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -28,7 +28,7 @@
     </ul>
 </nav>
 <main>
-    <app>Loading...</app>
+    <game>Loading...</game>
 </main>
 <footer class="navbar-fixed-bottom">
     <hr />
@@ -36,9 +36,9 @@
 </footer>
 
 <!-- js -->
-<script src="/javascripts/jquery-3.2.1.min.js"></script>
-<script src="/javascripts/bootstrap.js"></script>
-<script src="/javascripts/clientScripts.js"></script>
+<script src="/app/public/javascripts/jquery-3.2.1.min.js"></script>
+<script src="/app/public/javascripts/bootstrap.js"></script>
+<script src="/app/public/javascripts/clientScripts.js"></script>
 
 </body>
 
