--- a/client/app/views/game.html
+++ b/client/app/views/game.html
@@ -10,4 +10,14 @@
         <td>Year</td>
         <td>Actions</td>
     </tr>
+    <tr *ngFor="let game of games">
+        <td>{{game.title}}</td>
+        <td>{{game.developer}}</td>
+        <td>{{game.genre}}</td>
+        <td>{{game.year}}</td>
+        <td>
+            <button class="btn btn-primary">Edit</button>
+            <button class="btn btn-danger">Delete</button>
+        </td>
+    </tr>
 </table>
